--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,34 @@ body {
     flex-direction: column;
 }
 
+
+
+#download-app {
+    margin-left: 20px;
+}
+
+.download-link {
+    text-decoration: none;
+    color: #007BFF;
+    font-weight: 500;
+    display: flex;
+    align-items: center;
+}
+
+.download-link i {
+    margin-right: 5px;
+}
+
+.download-link:hover {
+    color: #0056b3;
+}
+
+
+
+
+
+
+
 @keyframes fadeIn {
     from {
         opacity: 0;
@@ -142,7 +170,7 @@ main {
     border: 1px solid #444;
     border-radius: 10px;
     padding: 20px;
-    height: 100%;
+    height: calc(100% - 60px); /* Adjust based on the height of input form */
     overflow-y: auto;
     background: #2e2e4f;
     flex: 1;
